minor change to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "weather-app",
   "version": "1.0.0",
   "description": "React Project1",
   "main": "app.js",
